Styles/style.css
/* Universal Selector */
* {
  box-sizing: border-box;
  padding: 0%;
  margin: 0%;
}

.inter-normal {
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
}

.noto-serif-normal {
  font-family: "Noto Serif", serif;
  font-optical-sizing: auto;
  font-style: normal;
  font-variation-settings: "wdth" 100;
}

.semi-bold {
  font-weight: 600;
}
/* colors */
.color01 {
  color: #8987a1;
}

.color02 {
  color: #000000;
}
.color03 {
  color: #e95a08;
}

/* nav Bar */
.nav-bar {
  max-width: 1140px;
  height: 71px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 30px auto 0;
}

.nav-logo {
  height: 82px;
  width: 135px;
}

.nav-content {
  width: 415px;
  height: 60px;
  margin: 5.5px 0px 5.5px 150px;
}

.nav-list {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 22px 0px;
  width: 415px;
  height: 24px;
  margin: 18px 0px;
  font-size: 1.2em;
  font-weight: 400;
}

.nav-list li {
  list-style: none;
}

.nav-list a {
  text-decoration: none;
}

.bold {
  font-weight: 700;
}

/* Banner */

.banner {
  display: flex;
  align-items: end;
  max-width: 1140px;
  height: 461px;
  margin: 0px auto;
  margin-top: 120px;
}
.banner-details {
  width: 570px;
  height: 333px;
}

.banner-image {
  width: 570px;
  height: 355px;
}

.banner-title {
  height: 178px;
  font-size: 4em;
}

.banner-description {
  margin-top: 13px;
  height: 128px;
  width: 100%;
  font-size: 1.45em;
  font-weight: 400;
}

/* Section-plants */
.plant-section {
  margin: 120px auto;
  max-width: 1140px;
  height: 1186px;
  display: flex;
  flex-direction: column;
}

.plant-header {
  max-width: 1140px;
  height: 138px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.plants-title {
  max-width: 1140px;
  height: 68px;
  text-align: center;
  font-size: 3.2em;
}

.plants-description {
  margin-top: 16px;

  max-width: 888px;
  height: 54px;
  text-align: center;
  font-size: 1.2em;
}

.plants {
  margin-top: 40px;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  row-gap: 30px;
  column-gap: 20px;
  max-width: 1140px;
  height: 1000px;
}

.plant {
  width: 270px;
  height: 485px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.plant-name {
  margin-top: -20px;
  font-size: 1.2em;
  font-weight: 500;
  height: 16px;
  width: 132px;
}
.plant-price {
  margin-top: -20px;
  font-size: 1.3em;
  font-weight: 700;
  height: 16px;
  width: 81px;
}
.plant-buying-button {
  margin-top: -15px;
  width: 270px;
  height: 50px;
  background-color: #e95a08;
  color: #ffffff;
  font-size: 1em;
  font-weight: 600;
  border: none;
  padding: 18px 49.5px;
}

/* flower section */
.flower {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 210px auto 100px;
  max-width: 1140px;
  height: 597px;
}

.flower-store-image {
  width: 540px;
  height: 597px;
}

.flower-image-wrapper {
  position: relative;
  width: 540px;
}
/* badge */
.badge {
  position: absolute;
  width: 286px;
  height: 286px;
  top: -122px;
  left: 360px;
  z-index: 10;
}
.flower-details {
  width: 540px;
  height: 521px;
}

.flower-title {
  font-size: 3.55em;
}

.flower-description {
  margin-top: 20px;
  font-size: 1.3em;
  font-weight: 400;
}

.deals {
  margin: 30px auto;
  max-width: 1440px;
  height: 138px;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.deal-title {
  width: 1440px;
  height: 68px;
  font-size: 3.55em;
}

.deal-description {
  margin-top: 20px;
  font-weight: 400;
  width: 888px;
  height: 54px;
  font-size: 1.3em;
}

/* plant picture section */
.plant-images {
  max-width: 1140px;
  height: 423px;
  margin: 120px auto;
  display: flex;
  justify-content: space-between;
}
.plant-images img {
  border-radius: 14px;
}
.leftside-images {
  width: 367px;
  height: 423px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.bloom-plant {
  position: relative;
}
.bloom-wrapper {
  position: absolute;
  top: 100px;
  left: 200px;
  width: max-content; /* prevent shrinking */
  white-space: nowrap; /* keep text in one line */
  text-align: center;
  transform: translate(-50%, -50%);
  color: white;
}
.bloom-button,
.ana-button,
.zabo-button {
  color: white;
  text-decoration: underline;
}

.bloom-plant-name {
  color: white;
  font-size: 1.3em;
  justify-content: center;
  align-items: center;
  text-align: center;
}
.bloom-button {
  color: white;
  font-size: 1em;
}
.ana-plant {
  position: relative;
}
.ana-wrapper {
  position: absolute;
  top: 100px;
  left: 180px;
  width: max-content; /* prevent shrinking */
  white-space: nowrap; /* keep text in one line */
  text-align: center;
  transform: translate(-50%, -50%);
}

.ana-plant-name {
  color: white;
  font-size: 1.3em;
  justify-content: center;
  align-items: center;
  text-align: center;
}
.ana-button {
  color: white;
  font-size: 1em;
}

.zabo-plant {
  position: relative;
}

.zabo-wrapper {
  position: absolute;
  top: 200px;
  left: 350px;
  width: max-content; /* prevent shrinking */
  white-space: nowrap; /* keep text in one line */
  text-align: center;
  transform: translate(-50%, -50%);
}

.zabo-plant-name {
  color: white;
  font-size: 2.6em;
  justify-content: center;
  align-items: center;
  text-align: center;
}
.zabo-button {
  color: white;
  font-size: 1.7em;
}

.rightside-image {
  width: 753px;
  height: 423px;
}

/* Down-banner */
.down-banner {
  max-width: 1440px;
  height: 533px;
  margin: 120px auto 0px;
}
.down-banner-img-container {
  position: relative;
  width: 100%;
  height: 100%;
}
.down-banner-img {
  width: 1440px;
  height: 533px;
}

.down-banner-details {
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  position: absolute;
  width: 830px;
  height: 141px;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.down-banner-title {
  font-size: 3.55em;
  color: #ffffff;
}
.down-banner-search {
  width: 830px;
  height: 50px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 16px;
}

.email {
  padding: 15px;
  width: 644px;
  height: 50px;
  font-size: 0.99em;
}
.down-banner-button {
  width: 186px;
  height: 50px;
  background-color: #e95a08;
  color: #ffffff;
  font-size: 1em;
  font-weight: 600;
  border: none;
  cursor: pointer;
}

/* footer section */

.footer-main {
  margin: 0px auto;
  
  max-width: 1440px;
  height: 348px;
  align-items: center;
  font-weight: 400;
}

.footer-secondary {
  width: 1120px;
  height: 248px;
  margin: 50px 160px;
  display: flex;
  justify-content: space-between;
  gap: auto;
}

.footer-details {
  width: 359px;
  height: 179px;
  display: flex;
  flex-direction: column;
}
.footer-logo {
  width: 135px;
  height: 82px;
}

.footer-description {
  margin-top: 16px;
  width: 359px;
  height: 81px;
  font-size: 1.3em;
}

.footer-list01 {
  font-size: 1em;
  width: 99px;
  height: 248px;
}

.footer-list02 {
  font-size: 1em;
  width: 144px;
  height: 248px;
}

.footer-list01 ul,
.footer-list02 ul {
  display: flex;
  flex-direction: column;
  gap: 32px;
}

.footer-list01 li,
.footer-list02 li {
  list-style: none;
}

.footer-platform-logos {
  width: 216px;
  height: 36px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 24px;
}

.footer-platform-logos img {
  width: 36px;
  height: 36px;
}
. @media screen and(max-width:576px) {
}

